--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <title>Welcome to Firebase Hosting</title>
 
 
@@ -13,8 +14,7 @@
     <script defer src="/__/firebase/7.8.2/firebase-database.js"></script>
     <script defer src="/__/firebase/7.8.2/firebase-messaging.js"></script>
     <script defer src="/__/firebase/7.8.2/firebase-storage.js"></script>
-    <link rel="stylesheet"  href="./style.css">
-
+    
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
 
