--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="style.css">
     <title>Welcome to Firebase Hosting</title>
 
 
@@ -74,18 +74,6 @@
     <td>案内済</td>
     <td>218</td>
     <td>1人</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>不在</td>
-    <td>219</td>
-    <td>6人</td>
-    <td>呼び出しました</td>
-  </tr>
-  <tr>
-    <td>案内待</td>
-    <td>220</td>
-    <td>4人</td>
     <td></td>
   </tr>
 </table>
