--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Welcome to Firebase Hosting</title>
 
+<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/7.8.2/firebase-app.js"></script>
@@ -116,6 +118,16 @@ function add_accept_list(num) {
   return;
 }
 
+// Initialize Cloud Firestore through Firebase
+firebase.initializeApp({
+  apiKey: '### FIREBASE API KEY ###',
+  authDomain: '### FIREBASE AUTH DOMAIN ###',
+  projectId: '### CLOUD FIRESTORE PROJECT ID ###'
+});
+
+var db = firebase.firestore();
+
+
 
 </script>
 
@@ -147,5 +159,30 @@ function add_accept_list(num) {
 
       });
     </script>
+ 
+ <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyA2QVmhz37F0l4ra6mTWVCSmHJhOTs8YLI",
+    authDomain: "waitboad.firebaseapp.com",
+    databaseURL: "https://waitboad.firebaseio.com",
+    projectId: "waitboad",
+    storageBucket: "waitboad.appspot.com",
+    messagingSenderId: "646136589404",
+    appId: "1:646136589404:web:fb1b54749b2192ca6b4a99",
+    measurementId: "G-GTKK46B6RF"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+ 
   </body>
 </html>
