--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@ function add_accept_list(num) {
     appId: "1:646136589404:web:fb1b54749b2192ca6b4a99",
     measurementId: "G-GTKK46B6RF"
   };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
+</script>
+<script>
 
+  
   var db = firebase.firestore();
 
 db.collection("users").get().then((querySnapshot) => {
@@ -181,7 +181,19 @@ db.collection("users").get().then((querySnapshot) => {
         console.log(doc.data())
     });
 });	
+
+db.collection("users").add({
+    name: "Harry Bosch",
+    })
+.then(function(docRef) {
+    console.log("Document written with ID: ", docRef.id);
+})
+.catch(function(error) {
+    console.error("Error adding document: ", error);
+});	
 </script>
  
+
+
   </body>
 </html>
