--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@ function add_accept_list(num) {
     appId: "1:646136589404:web:fb1b54749b2192ca6b4a99",
     measurementId: "G-GTKK46B6RF"
   };
+
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
 </script>
 <script>
 
