--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@ function add_accept_list(num) {
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-analytics.js"></script>
 
-<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script>
+<<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script>
 
 
 
